--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,13 +23,7 @@ html {
 
 body {
   color: var(--text);
-  font-family: "-apple-system",
-    "BlinkMacSystemFont",
-    "Segoe UI",
-    "Roboto",
-    "Helvetica",
-    "Arial",
-    "sans-serif";
+  font-family: "Ubuntu", sans-serif;
   font-size: 1.6rem;
   margin: 0 2rem;
 }
@@ -58,6 +52,16 @@ a:hover {
 
 header {
   border-bottom: 3px double var(--text);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+code {
+  font-family: "Ubuntu Mono", monospace;
 }
 
 h1 {
