--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,8 @@
   --text: #222;
   --accent: #090;
   --tertiary: #009;
+  --body-fonts: "Ubuntu", sans-serif;
+  --code-fonts: "Ubuntu Mono", monospace;
 }
 
 ::selection {
@@ -23,7 +25,7 @@ html {
 
 body {
   color: var(--text);
-  font-family: "Ubuntu", sans-serif;
+  font-family: var(--body-fonts);
   font-size: 1.6rem;
   margin: 0 2rem;
 }
@@ -61,14 +63,15 @@ h4,
 h5,
 h6,
 code {
-  font-family: "Ubuntu Mono", monospace;
+  font-family: var(--code-fonts);
+  letter-spacing: 0.1rem;
 }
 
 h1 {
   color: var(--accent);
-  text-transform: lowercase;
   font-size: 4rem;
   margin: 2rem 0;
+  text-transform: lowercase;
 }
 
 h1:before {
@@ -76,18 +79,16 @@ h1:before {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 2.2rem;
 }
 
 footer {
   border-top: 3px double var(--text);
+  font-family: var(--code-fonts);
 }
 
 .project-list {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-.project {
 }
